--- a/gb/20/5/12/n12103507.md
+++ b/gb/20/5/12/n12103507.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/z2544/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/z2544/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/z2544/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/z2544/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/z2544/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/z2544/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/z2544/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/z2544/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/z2544/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/z2544/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/z2544/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/z2544/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/z2544/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共病毒“变化莫测”新症状层出不穷</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/Novel_Coronavirus_SARS-CoV-2_49531042907-600x400.jpg" />
 <h6>随着疫情的发展，中共病毒也被发现越来越多的症状。(NIAID-RML)
 </h6>
 <hr>
-	<p>【大纪元2020年05月13日讯】（大纪元记者张婷综合报导）<ahref="https://github.com/z2544/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/z2544/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的神秘面纱一直难以被完全揭开。单从<ahref="https://github.com/z2544/djy/blob/master/gb/tag/%E7%97%87%E7%8A%B6.md#1">症状</a>来看，范围广泛，且不断有新症状出现。该病毒自去年年底爆发以来，研究人员到现在也没掌握其全部症状。症状显示部位几乎遍布整个身体，从外到里，从头到脚，且变化莫测。</p>
-<p>此外，和一般病毒不同，<ahref="https://github.com/z2544/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>的感染者中有相当比例是无<ahref="https://github.com/z2544/djy/blob/master/gb/tag/%E7%97%87%E7%8A%B6.md#1">症状</a>者，但却具有传染力。因此，仅依据症状无法判断一个人是否已感染病毒。这给病毒的控制带来了更大的难度。</p>
+	<p>【大纪元2020年05月13日讯】（大纪元记者张婷综合报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的神秘面纱一直难以被完全揭开。单从<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%97%87%E7%8A%B6.md#1">症状</a>来看，范围广泛，且不断有新症状出现。该病毒自去年年底爆发以来，研究人员到现在也没掌握其全部症状。症状显示部位几乎遍布整个身体，从外到里，从头到脚，且变化莫测。</p>
+<p>此外，和一般病毒不同，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>的感染者中有相当比例是无<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%97%87%E7%8A%B6.md#1">症状</a>者，但却具有传染力。因此，仅依据症状无法判断一个人是否已感染病毒。这给病毒的控制带来了更大的难度。</p>
 <p>中共病毒最先发现的典型症状包括发烧、咳嗽和呼吸急促或呼吸困难等。美国疾病控制和预防中心（CDC）4月24日表示，CDC在其网站上增加了6种染疫者的症状。</p>
 <p>CDC表示，发冷、间歇性冷得发抖、肌肉疼痛、头痛、喉咙痛和味觉或嗅觉突然丧失也是感染中共病毒的常见指标。</p>
 <p>该机构还警告说，呼吸困难、持续的疼痛或胸闷、思维混乱或无法清醒，以及嘴唇或面部发紫均属紧急状况，有这些症状的人应立即就医。</p>
@@ -15,7 +15,7 @@
 <h2>丧失味觉和嗅觉</h2>
 <p>在中共病毒爆发的前期，人们并未注意到丧失味觉和嗅觉可能是感染病毒的特有症状。但越来越多的证据都证实了两者的关系。</p>
 <p>根据4月初发布的一项研究，伦敦国王学院的一个研究小组认为，味觉和嗅觉丧失是检测某人是否感染中共病毒的最佳方法之一。</p>
-<p>英国医生引用其它国家的报告表示，大量<ahref="https://github.com/z2544/djy/blob/master/gb/tag/%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md#1">冠状病毒</a>（中共病毒）感染者出现嗅觉缺失。他们说，在检测广泛的韩国，2000名检测呈阳性的患者中有30%的人出现嗅觉缺失，这是他们的主要症状（这些都是轻症病例）。</p>
+<p>英国医生引用其它国家的报告表示，大量<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md#1">冠状病毒</a>（中共病毒）感染者出现嗅觉缺失。他们说，在检测广泛的韩国，2000名检测呈阳性的患者中有30%的人出现嗅觉缺失，这是他们的主要症状（这些都是轻症病例）。</p>
 <p>美国耳鼻喉科学会（American Academy of Otolaryngology）3月份在官网发布信息说，越来越多的证据（anecdotal evidence）表明，嗅觉丧失或减少以及味觉的丧失，是和中共病毒肺炎相关的重要症状，它们已出现在最终检测呈阳性、无其它症状的患者身上。</p>
 <p>在受病毒影响严重的意大利，医生们表示，他们得出的结论是，味觉和嗅觉的丧失表明，一个看上去很健康的人实际上携带了该病毒，并且可能正在将其传播给他人。</p>
 <h2>中共病毒另一新症状：失去触觉</h2>
@@ -31,7 +31,7 @@
 <p>这份报告是由西班牙官方足病学院总理事会所提出。报告指出，这类患者会在足部出现紫色的肿块，外观与水痘、麻疹或冻疮非常相似，通常出现在脚趾上，痊愈后不留痕迹。</p>
 <p>研究人员补充说，类似的病例已开始在意大利、法国、西班牙等国出现。</p>
 <h2>中共病毒可能导致年轻患者中风</h2>
-<p>一份研究报告显示，中共病毒（<ahref="https://github.com/z2544/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）可能导致50岁以下患者中风。</p>
+<p>一份研究报告显示，中共病毒<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）可能导致50岁以下患者中风。</p>
 <p>西奈山卫生系统神经外科医生托马斯·奥克斯利（Thomas Oxley）在接受美国有线电视新闻网（CNN）的一次采访中说，该病毒可以引发动脉血液凝块，导致“严重中风”。这项发现将发表在《新英格兰医学杂志》上。</p>
 <p>奥克斯利补充说：“我们的报告显示，在过去两周中，年轻患者的突发性中风发生率增加了七倍。”</p>
 <p>“这些患者大多数都没有既往病史，并且在家中只有轻度感染者或是无症状感染者。”他说。</p>
@@ -47,7 +47,7 @@
 <p>针对中共病毒感染群体，婴儿和儿童一直被认为是低风险群体，但纽约州近期出现的儿童炎症综合症已经导致至少3人死亡。纽约州长安德鲁?库默（Andrew Cuomo）表示，该疾病与中共病毒有关联。</p>
 <p>纽约州目前正在调查约100例可能与中共病毒有关的儿童炎症综合症病例，这种新发疾病的患儿会持续发烧、出现斑疹、腹痛和呕吐，他们的免疫系统“过载”。医生称这些症状与川崎病类似，后者会引发儿童血管发炎。</p>
 <p>数据显示，超过一半以上的病例，57%发生在5至14岁的儿童中。大约29%的病例是在5到9岁之间的儿童中，另有28%的病例是在10至14岁之间的儿童。</p>
-<p>《金融时报》称，这些发现使<ahref="https://github.com/z2544/djy/blob/master/gb/tag/%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md#1">冠状病毒</a>呈现出新一层危险，此前人们认为，与年长者相比，年幼的人相对不易感。几项研究发现，就算染上病毒，儿童只会表现出轻微的症状。</p>
+<p>《金融时报》称，这些发现使<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92.md#1">冠状病毒</a>呈现出新一层危险，此前人们认为，与年长者相比，年幼的人相对不易感染。几项研究发现，就算染上病毒，儿童只会表现出轻微的症状。</p>
 <p>纽约州长库默日前表示，州政府正在调查可能患有这种新儿科疾病的儿童，这些孩子大多刚学会走路或正处于小学学龄期。</p>
 <p>纽约市市长白思豪表示，“我们已经说过很多次，（新冠病毒）很棘手、很有挑战性，因为它是全新的。还有很多未解的问题。”</p>
 <h2>神秘儿童炎症综合症蔓延到肯塔基州</h2>
@@ -61,42 +61,48 @@
 <p>在美国，纽约州、新泽西州、康涅狄格州、路易斯安那州和密歇根州地区的居民搜索眼睛痛的数量也很高。</p>
 <p>斯蒂芬斯-戴维多维兹指出，已有报导称染疫者抱怨眼部不适。例如3月31日一份对38位中国大陆患者进行的研究的论文指出，有三分之一的患者在染疫后进行了眼部异常检查。</p>
 <p>不过，他在文中写道，“谷歌搜索数据只是提供了眼睛痛可能是该疾病的症状，但是，它可能只影响一小部分的COVID-19患者。”</p>
-<p>责任编辑：林妍#</p>
+<p>责任编辑：林妍#?◇</p>
 <p>&nbsp;</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/4/1/n11996335.md#1">意大利记者：不要称中国病毒 要称中共病毒</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/4/5/n12004062.md#1">美议员为大流行病原征名“中共病毒”胜出</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/11/n12100329.md#1">研究：中共病毒传染性比SARS强百倍</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/12/n12100980.md#1">研究表明：圣塔克拉拉县中共病毒集中在圣荷西贫穷地区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/1/n11996335.md#1">意大利记者：不要称中国病毒 要称中共病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/5/n12004062.md#1">美议员为大流行病原征名“中共病毒”胜出</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/11/n12100329.md#1">研究：中共病毒传染性比SARS强百倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/12/n12100980.md#1">研究表明：圣塔克拉拉县中共病毒集中在圣荷西贫穷地区</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10147841.md#1" target="_blank">袁斌：河南信阳姜寨村大饥荒时代的往事</a></li><li><a href="https://github.com/z2544/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/19/n10862316.md#1" target="_blank">刘晓：祠堂被毁 不孝子孙愧对先祖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/11/n12099864.md#1">中共火箭失控 飞掠洛城和纽约 坠入大西洋</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/11/n12099999.md#1">【新闻看点】真把世界惹恼了 北京最怕什么？</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/10/n12096347.md#1">【最新疫情5·11】川普：对重谈美中协议没兴趣</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/11/n12099257.md#1">武统台湾？台前国大代表：共军军力吹牛露馅</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/12/n12100685.md#1">【拍案惊奇】武汉疫爆百人隔离 美要推倒防火墙</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/12/n12100709.md#1">黄秋生抵台进行居家隔离 自曝准备入籍台湾</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/11/n12098060.md#1">尹馨无故高烧入院 一度确诊癌症二期急切肾</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/11/n12099898.md#1">与女儿一起临摹书法 孙俪赞小花毛笔字特棒</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/10/n12097513.md#1">结婚纪念日赶上母亲节 章子怡汪峰晒合照庆祝</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/8/n12092756.md#1">美国先知凯西  预言当今的中国与世界</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/9/n12095021.md#1">武汉瘟疫治寻根 历史天象醒今人（下）</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/4/6/n12007049.md#1">天人预言未来事  识破妖精本色</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/10/n12097175.md#1">天才预言家珍妮  2020年大决战预言</a></li>
-<li><a href="https://github.com/z2544/djy/blob/master/gb/20/5/7/n12091012.md#1">获罪于天无所祷也 他们遭雷劈并不是偶然的</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/z2544/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/z2544/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/12/n12103507.htm">中共病毒“变化莫测”新症状层出不穷</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/12/n12103507.htm">中共病毒“变化莫测”新症状层出不穷</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/z2544/djy/blob/master/gb/20/5/12/n12103507.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/z2544/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/z2544/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/z2544/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/z2544/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/z2544/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/5/12/n12103507.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
